--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "@angular/cli": "~16.1.5",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.3",
     "jasmine-core": "~4.6.0",
+    "jest": "^29.6.2",
+    "jest-preset-angular": "^13.1.1",
     "json-server": "^0.17.3",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
