--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "codemirror": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
