--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --optimization --build-optimizer --aot",
+    "build": "ng build --optimization --build-optimizer --aot --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
+  "sideEffects": false,
   "dependencies": {
     "@angular/animations": "^16.1.0",
     "@angular/cdk": "^16.1.5",
