--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ESNext",
+    "module": "ES2020",
     "useDefineForClassFields": false,
     "lib": ["ESNext", "dom"]
   },
