--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --optimization --build-optimizer --aot --configuration production",
+    "build": "ng build --optimization --build-optimizer --aot --configuration production && npm run purgecss",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "purgecss": "purgecss -c purgecss.config.js"
   },
   "private": true,
   "sideEffects": false,
@@ -36,6 +37,7 @@
     "jest": "^29.6.2",
     "jest-preset-angular": "^13.1.1",
     "json-server": "^0.17.3",
+    "purgecss": "^5.0.0",
     "typescript": "~5.1.3"
   }
 }
